--- a/03_EF_DbFirst/03_EF_DbFirst.csproj
+++ b/03_EF_DbFirst/03_EF_DbFirst.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>_11_TSQL</RootNamespace>
+    <RootNamespace>_03_EF_DbFirst</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
