--- a/12_WebCactusAPI/appsettings.json
+++ b/12_WebCactusAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "Issuer": "www.andrenkov.com",
+    "Audience": "http://localhost:5009/",
+    "ExpireDays": 30
+  }
 }
